# AegisRelay

./: .env.example  .gitignore  README.md  adr-001-product-boundary.md  adr-002-storage-strategy.md  adr-003-canonical-contracts.md  adr-004-governance-semantics.md  adr-005-idempotency.md  adr-006-expiry-supersession.md  adr-007-embedding-lifecycle.md  adr-008-crud-maintenance.md  pyproject.toml
docs/: 01_PRD_v1.0.md  02_ADR_Log_v1.0.md  03_Integration_Design_v1.0.md  AI_ASSISTED_SETUP.md  AegisRelay_Getting_Started_Guide.docx  AegisRelay_Phase2_Handoff.md  GETTING_STARTED.md  TEAM_UPDATE_2026-03-16.md
docs/archive/: AegisRelay_Cursor_Handoff.md  AegisRelay_Cursor_Handoff_v2.md  AegisRelay_Cursor_Handoff_v3.md
src/aegisrelay/: __init__.py  health.py  relay_service.py
src/aegisrelay/adapters/: __init__.py  base.py  perplexity.py  stub.py
src/aegisrelay/admin/: __init__.py  crud_service.py
src/aegisrelay/config/: __init__.py  secrets.py
src/aegisrelay/db/: __init__.py  base.py  postgres_provider.py  schema.sql  schema_sqlite.sql  sqlite_provider.py
src/aegisrelay/governance/: __init__.py  lens_constants.py  lens_post_call.py  lens_pre_call.py  pipeline.py
src/aegisrelay/models/: __init__.py  audit_bundle.py  contracts.py  governance_event.py  lens.py  memory_record.py
src/aegisrelay/workers/: __init__.py  (+3 more)
supabase/: config.toml
tests/: conftest.py  test_crud.py  test_end_to_end.py  test_health.py  test_idempotency.py  test_models.py  test_outbox.py  test_outbox_durability.py  test_phase1.py  test_pipeline.py  test_postgres_provider.py  test_secrets.py
(+1 files in other folders)
